Adding default jvm args as is standelone.conf